@@ -5,6 +5,9 @@ Changelog
 1.3
 ---
 
+- Support for transporting datetime objects.
+  [jone]
+
 - Improve marker interface adapter.
   Do not remove / readd all interfaces, but only apply differences.
   [jone]
